--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -2,3 +2,11 @@
   margin-right: 20px;
   text-decoration: underline;
 }
+.btn.active {
+  font-weight: bold;
+  color: blue;
+}
+
+.box {
+  border: 1px solid #ccc;
+}
