--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,33 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+}
+
+.btn {
+  margin-right: 20px;
+  text-decoration: underline;
+}
+
+.btn.active {
+  font-weight: bold;
+  color: blue;
+}
+
+.box {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.flex-center {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+.list {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
